--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,62 @@
+:root {
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+
+body {
+  font-family: var(--default-font-family);
+}
+
 h1 {
   font-family: "Playfair Display", serif;
-  display: inline;
+  color: black;
+  font-size: 96px;
+  font-weight: bold;
+}
+
+h2 {
+  font-family: var(--heading-font-family);
+  line-height: 2;
+  font-size: 24px;
+  font-weight: normal;
 }
 
 p {
-  font-family: "Playfair Display", serif;
+  font-family: var(--default-font-family);
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: #272142;
+}
+
+div {
   display: block;
-  margin-top: 0;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 100%;
+}
+
+.hero {
+  text-align: center;
+  background-color: var(--secondary-color);
+  padding: 160px 20px;
+}
+
+.contact-button {
+  background: var(--branding-color);
+  color: white;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  font-family: var(--default-font-family);
+  border: 1px solid transparent;
+}
+
+.btn {
+  font-weight: 400;
 }
