--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
   font-family: "Playfair Display", serif;
-  color: black;
+  color: #352069;
   font-size: 96px;
   font-weight: bold;
 }
@@ -25,7 +25,7 @@ h2 {
 
 p {
   font-family: var(--default-font-family);
-  font-size: 36px;
+  font-size: 26px;
   font-weight: bold;
   margin: 0;
   color: #272142;
@@ -41,7 +41,6 @@ div {
 }
 
 .projects p {
-  font-size: 16px;
   font-weight: 100;
   margin-bottom: 20px;
   display: block;
@@ -52,6 +51,7 @@ div {
   border: 1px solid var(--branding-color);
   color: var(--branding-color);
   display: block;
+  font-size: 18px;
 }
 
 .container {
@@ -67,6 +67,7 @@ div {
 
 .project-description {
   padding: 120px 60px;
+  color: #352069;
 }
 
 .contact-button {
