--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,26 @@
   --default-font-family: "Poppins", sans-serif;
 }
 
+@media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
+    line-height: 56px;
+  }
+
+  h2 {
+    font-size: 44px;
+  }
+
+  .hero {
+    padding: 80px 20px;
+  }
+
+  .about-hero {
+    text-align: center;
+    padding: 0;
+  }
+}
+
 body {
   font-family: var(--default-font-family);
 }
@@ -33,6 +53,10 @@ p {
 
 div {
   display: block;
+}
+
+img {
+  border-radius: 5px;
 }
 
 .projects h2 {
@@ -66,12 +90,39 @@ div {
   padding: 160px 20px;
 }
 
+.about-hero {
+    padding: 160px 40px;
+}
+
+.about-hero h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-hero h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+  font-weight: 600;
+}
+
+.about-hero p {
+font-size: 16px;
+}
+
+.about-hero img {
+  margin-top: 60px;
+}
+
+.about-section-content {
+  margin: 30px;
+}
+
 .project-description {
   padding: 120px 60px;
   color: #352069;
 }
 
-.contact-button {
+.main-button {
   background: var(--branding-color);
   color: white;
   border-radius: 4px;
@@ -88,3 +139,5 @@ div {
   padding: 15px 30px;
   margin-top: 48px;
 }
+
+
