--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,7 +91,7 @@ img {
 }
 
 .about-hero {
-    padding: 160px 40px;
+  padding: 160px 40px;
 }
 
 .about-hero h1 {
@@ -106,7 +106,7 @@ img {
 }
 
 .about-hero p {
-font-size: 16px;
+  font-size: 16px;
 }
 
 .about-hero img {
@@ -132,6 +132,11 @@ font-size: 16px;
   margin-top: 48px;
   font-family: var(--default-font-family);
   border: 1px solid transparent;
+  min-width: 170px;
+}
+
+.contact-button {
+  margin-right: 30px;
 }
 
 .btn {
@@ -139,5 +144,3 @@ font-size: 16px;
   padding: 15px 30px;
   margin-top: 48px;
 }
-
-
