--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@
     padding: 80px 20px;
   }
 
-  .about-hero {
+  .content-container {
     text-align: center;
     padding: 0;
   }
@@ -90,31 +90,42 @@ img {
   padding: 160px 20px;
 }
 
-.about-hero {
+.content-container {
   padding: 160px 40px;
 }
 
-.about-hero h1 {
+.content-container h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-hero h2 {
+.content-container h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
   font-weight: 600;
 }
 
-.about-hero p {
+.content-container p {
   font-size: 16px;
 }
 
-.about-hero img {
+.content-container img {
   margin-top: 60px;
 }
 
-.about-section-content {
+.content {
   margin: 30px;
+}
+
+.content h3 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+  line-height: 1.5;
+  margin: 20px 0 0;
+}
+
+.content p {
+  font-size: 14px;
 }
 
 .project-description {
