--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 :root {
   --branding-color: #6c63ff;
   --secondary-color: #f9f7fe;
+  --tertiary-color: #352069;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
@@ -31,7 +32,7 @@ body {
 
 h1 {
   font-family: "Playfair Display", serif;
-  color: #352069;
+  color: var(--tertiary-color);
   font-size: 96px;
   font-weight: bold;
   line-height: 1;
@@ -44,12 +45,17 @@ h2 {
   font-weight: normal;
 }
 
+h4 {
+  font-size: 48px;
+  color: var(--tertiary-color);
+}
+
 p {
   font-family: var(--default-font-family);
   font-size: 26px;
   font-weight: bold;
   margin: 0;
-  color: #272142;
+  color: var(--tertiary-color);
 }
 
 div {
@@ -62,6 +68,47 @@ img {
 
 nav a {
   margin-left: 20px;
+}
+
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+}
+
+footer .email-link {
+  text-decoration: none;
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 40px;
+  color: var(--tertiary-color);
+}
+
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  padding: 10px 14px;
+  font-size: 18px;
+  border-radius: 50%;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background-color: var(--branding-color);
+  transition: all 100ms ease-in-out;
 }
 
 .projects h2 {
@@ -135,7 +182,7 @@ nav a {
 
 .project-description {
   padding: 120px 60px;
-  color: #352069;
+  color: var(--tertiary-color);
 }
 
 .main-button {
