--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,11 +119,11 @@ footer .social-links a:hover {
 .hero {
   text-align: center;
   background-color: var(--secondary-color);
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 
 .content-container {
-  padding: 160px 40px;
+  padding: 80px 40px;
 }
 
 .content-container h1 {
@@ -172,7 +172,6 @@ footer .social-links a:hover {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
-  margin-top: 48px;
   font-family: var(--default-font-family);
   border: 1px solid transparent;
   min-width: 170px;
@@ -185,11 +184,11 @@ footer .social-links a:hover {
 .btn {
   font-weight: 400;
   padding: 15px 30px;
-  margin-top: 48px;
+  margin-top: 10px;
 }
 
 .container {
-  max-width: 900px;
+  max-width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -212,13 +211,8 @@ footer .social-links a:hover {
     padding: 80px 20px;
   }
 
-  .content-container {
-    text-align: center;
-    padding: 0;
-  }
-
   .project-description {
-    padding: 0;
+    padding-bottom: 0;
     text-align: center;
   }
   .project-description h2 {
@@ -227,5 +221,9 @@ footer .social-links a:hover {
 
   .project-description .btn {
     display: inline;
+  }
+
+  .container {
+    max-width: 100%;
   }
 }
