--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ body {
 h1 {
   font-family: "Playfair Display", serif;
   color: var(--tertiary-color);
-  font-size: 96px;
+  font-size: 50px;
   font-weight: bold;
   line-height: 1;
 }
@@ -97,7 +97,7 @@ footer .social-links a:hover {
 }
 
 .projects h2 {
-  font-size: 64px;
+  font-size: 40px;
   line-height: 1.2;
 }
 
@@ -132,8 +132,8 @@ footer .social-links a:hover {
 }
 
 .content-container h1 {
-  font-size: 64px;
-  line-height: 80px;
+  font-size: 40px;
+  line-height: 60px;
 }
 
 .content-container h2 {
@@ -166,8 +166,8 @@ footer .social-links a:hover {
 }
 
 .project-description {
-  padding: 120px 60px;
   color: var(--tertiary-color);
+  padding: 20px;
 }
 
 .main-button {
